// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test api params not only employeur 1`] = `
Object {
  "entreprises": Array [
    Object {
      "activitePrincipale": "Fabrication et rechapage de pneumatiques",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635173",
          "idcc": 1486,
          "mtime": 1556652289,
          "shortTitle": "Bureaux d'études techniques, cabinets d'ingénieurs-conseils et sociétés de conseils",
          "texte_de_base": "KALITEXT000005679895",
          "title": "Convention collective nationale des bureaux d'études techniques, des cabinets d'ingénieurs-conseils et des sociétés de conseils du 15 décembre 1987. ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635173",
        },
      ],
      "etablissements": 130,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES <b><u>MICHELIN</b></u>",
      "label": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
      "matching": 20,
      "matchingEtablissement": Object {
        "address": "7 Avenue du Président René Coty 10600 La Chapelle-Saint-Luc",
        "categorieEntreprise": "GE",
        "siret": "85520050701171",
      },
      "simpleLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
      "siren": "855200507",
    },
    Object {
      "activitePrincipale": "Édition de livres",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635173",
          "idcc": 1486,
          "mtime": 1556652289,
          "shortTitle": "Bureaux d'études techniques, cabinets d'ingénieurs-conseils et sociétés de conseils",
          "texte_de_base": "KALITEXT000005679895",
          "title": "Convention collective nationale des bureaux d'études techniques, des cabinets d'ingénieurs-conseils et des sociétés de conseils du 15 décembre 1987. ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635173",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 3,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> TRAVEL PARTNER",
      "label": "MICHELIN TRAVEL PARTNER",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "27 Cours de l'Ile Seguin 92100 Boulogne-Billancourt",
        "categorieEntreprise": "GE",
        "siret": "43367772100030",
      },
      "simpleLabel": "MICHELIN TRAVEL PARTNER",
      "siren": "433677721",
    },
    Object {
      "activitePrincipale": "Fabrication de caoutchouc synthétique",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635613",
          "idcc": 44,
          "mtime": 1562873918,
          "shortTitle": "Industries chimiques et connexes",
          "texte_de_base": "KALITEXT000005677744",
          "title": "Convention collective nationale des industries chimiques et connexes du 30 décembre 1952. Étendue par arrêté du 13 novembre 1956 JONC 12 décembre 1956",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635613",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "SIMOREP ET CIE SOC DU CAOUTCHOUC SYNTHETIQUE <b><u>MICHELIN</b></u>",
      "label": "SIMOREP ET CIE SOC DU CAOUTCHOUC SYNTHETIQUE MICHELIN",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "Rue Edouard Michelin 33530 Bassens",
        "categorieEntreprise": "GE",
        "siret": "32852574600017",
      },
      "simpleLabel": "SIMOREP ET CIE",
      "siren": "328525746",
    },
    Object {
      "activitePrincipale": "Action sociale sans hébergement pour jeunes enfants",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_NON_ETEN",
          "id": "KALICONT000005635234",
          "idcc": 29,
          "shortTitle": "Hospitalisation privée : établissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif (FEHAP)",
          "texte_de_base": "KALITEXT000029787837",
          "title": "Convention collective nationale des etablissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif du 31 octobre 1951.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635234",
        },
      ],
      "etablissements": 11,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "SOHPEM SOC OEUVRES HYGIENE <b><u>MICHELIN</b></u> MULTI-ACCUEIL LES 3 RECRES",
      "label": "SOHPEM SOC OEUVRES HYGIENE MICHELIN MULTI-ACCUEIL LES 3 RECRES",
      "matching": 3,
      "matchingEtablissement": Object {
        "address": "19 Rue de Bien - Assis 63100 Clermont-Ferrand",
        "categorieEntreprise": "PME",
        "siret": "85720172700172",
      },
      "simpleLabel": "SOC OEUVRES HYGIENE MICHELIN",
      "siren": "857201727",
    },
    Object {
      "activitePrincipale": "Hébergement médicalisé",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_NON_ETEN",
          "id": "KALICONT000005635234",
          "idcc": 29,
          "shortTitle": "Hospitalisation privée : établissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif (FEHAP)",
          "texte_de_base": "KALITEXT000029787837",
          "title": "Convention collective nationale des etablissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif du 31 octobre 1951.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635234",
        },
      ],
      "etablissements": 8,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "S.S.I.D.P.A <b><u>MICHELINE</b></u> GOYHENECHE SOINS DOMICILE PERSONNES AGEES EHPAD LE SOULEILHOU",
      "label": "S.S.I.D.P.A MICHELINE GOYHENECHE SOINS DOMICILE PERSONNES AGEES EHPAD LE SOULEILHOU",
      "matching": 6,
      "matchingEtablissement": Object {
        "address": "4 Rue de la Quere 09290 Le Mas-d'Azil",
        "categorieEntreprise": "PME",
        "siret": "33380040700061",
      },
      "simpleLabel": "MICHELINE GOYHENECHE",
      "siren": "333800407",
    },
    Object {
      "activitePrincipale": "Activités des syndicats de salariés",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 7,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "COMITE ENTREPRISE <b><u>MICHELIN</b></u>",
      "label": "COMITE ENTREPRISE MICHELIN",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "16 Rue de Toutlemonde 49300 Cholet",
        "categorieEntreprise": "PME",
        "siret": "77563420700093",
      },
      "simpleLabel": "COMITE ENTREPRISE MICHELIN",
      "siren": "775634207",
    },
    Object {
      "activitePrincipale": "Transports aériens de passagers",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635872",
          "idcc": 275,
          "mtime": 1560802019,
          "shortTitle": "Transport aérien : personnel au sol",
          "texte_de_base": "KALITEXT000005688161",
          "title": "Convention collective nationale du personnel au sol des entreprises de transport aérien du 22 mai 1959.  Etendue par arrêté du 10 janvier 1964 JONC 21 janvier 1964 et rectificatif JONC 4 février 1964.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635872",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> AIR SERVICES",
      "label": "MICHELIN AIR SERVICES",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "23 Place des Carmes Dechaux 63000 Clermont-Ferrand",
        "categorieEntreprise": "GE",
        "siret": "41474650300013",
      },
      "simpleLabel": "MICHELIN AIR SERVICES",
      "siren": "414746503",
    },
    Object {
      "activitePrincipale": "Autres assurances",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635784",
          "idcc": 2128,
          "mtime": 1562096111,
          "shortTitle": "Mutualité",
          "texte_de_base": "KALITEXT000005639853",
          "title": "Convention collective nationale de la mutualité du 31 janvier 2000.  Etendue par arrêté du 17 août 2001 JORF 28 août 2001",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635784",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "MNPEM MUTUELLE NATIONALE PERSO ETS <b><u>MICHELIN</b></u>",
      "label": "MNPEM MUTUELLE NATIONALE PERSO ETS MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "2 Rue de Bien - Assis 63100 Clermont-Ferrand",
        "categorieEntreprise": "PME",
        "siret": "38204646400030",
      },
      "simpleLabel": "MUTUELLE NATIONALE PERSO ETS MICHELIN",
      "siren": "382046464",
    },
    Object {
      "activitePrincipale": "Autres commerces de détail alimentaires en magasin spécialisé",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635421",
          "idcc": 1505,
          "mtime": 1558553477,
          "shortTitle": "Commerce de détail des fruits et légumes, épicerie et produits laitiers",
          "texte_de_base": "KALITEXT000005689370",
          "title": "Convention collective nationale du commerce de détail des fruits et légumes, épicerie et produits laitiers du 15 avril 1988.  Etendue par arrêté du 20 juin 1988, JORF 25 juin 1988.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635421",
        },
      ],
      "etablissements": 4,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "FROMAGERIE DANIEL <b><u>MICHELIN</b></u>",
      "label": "FROMAGERIE DANIEL MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "15 Grand Rue 01210 Ferney-Voltaire",
        "categorieEntreprise": "PME",
        "siret": "44869567600032",
      },
      "simpleLabel": "FROMAGERIE DANIEL MICHELIN",
      "siren": "448695676",
    },
    Object {
      "activitePrincipale": "Activités des syndicats de salariés",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "COMITE D'ETABLISSEMENT <b><u>MICHELIN</b></u>",
      "label": "COMITE D'ETABLISSEMENT MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "6 Avenue du Président René Coty 10600 La Chapelle-Saint-Luc",
        "categorieEntreprise": "PME",
        "siret": "32779802100017",
      },
      "simpleLabel": "COMITE D'ETABLISSEMENT MICHELIN",
      "siren": "327798021",
    },
    Object {
      "activitePrincipale": "Travaux de plâtrerie",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "idcc": 152,
          "shortTitle": "",
        },
      ],
      "etablissements": 5,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "PLATRERIE PEINTURE <b><u>MICHELIN</b></u>",
      "label": "PLATRERIE PEINTURE MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "2 Avenue de Chalon 71380 Saint-Marcel",
        "categorieEntreprise": "PME",
        "siret": "51894867400040",
      },
      "simpleLabel": "PLATRERIE PEINTURE MICHELIN",
      "siren": "518948674",
    },
    Object {
      "activitePrincipale": "Exploitation de laiteries et fabrication de fromage",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635449",
          "idcc": 112,
          "mtime": 1562873918,
          "shortTitle": "Lait : industrie laitière",
          "texte_de_base": "KALITEXT000005653489",
          "title": "Convention collective nationale de l'industrie laitière du 20 mai 1955, modifiée par avenant n° 34 du 29 juin 2006. Etendue par arrêté du 10 décembre 2007 JORF 18 décembre 2007",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635449",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635421",
          "idcc": 1505,
          "mtime": 1558553477,
          "shortTitle": "Commerce de détail des fruits et légumes, épicerie et produits laitiers",
          "texte_de_base": "KALITEXT000005689370",
          "title": "Convention collective nationale du commerce de détail des fruits et légumes, épicerie et produits laitiers du 15 avril 1988.  Etendue par arrêté du 20 juin 1988, JORF 25 juin 1988.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635421",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "FROMAGERIE <b><u>MICHELIN</b></u> FABRICE",
      "label": "FROMAGERIE MICHELIN FABRICE",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "2 Place de la Mairie 25160 Saint-Point-Lac",
        "categorieEntreprise": "PME",
        "siret": "47848103900012",
      },
      "simpleLabel": "FROMAGERIE MICHELIN FABRICE",
      "siren": "478481039",
    },
    Object {
      "activitePrincipale": "Commerce de détail de viandes et de produits à base de viande en magasin spécialisé",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635593",
          "idcc": 992,
          "mtime": 1560458317,
          "shortTitle": "Boucherie, boucherie-charcuterie, boucherie hippophagique, triperie, commerces de volailles et gibiers",
          "texte_de_base": "KALITEXT000005674098",
          "title": "Convention collective nationale de la boucherie, boucherie-charcuterie, boucherie hippophagique, triperie, commerces de volailles et gibiers du 12 décembre 1978, actualisée",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635593",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "SARL ROUFFIAC - <b><u>MICHELIN</b></u>",
      "label": "SARL ROUFFIAC - MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "68 Rue Louis le Grand 39140 Bletterans",
        "categorieEntreprise": "PME",
        "siret": "37767256300014",
      },
      "simpleLabel": "SARL ROUFFIAC - MICHELIN",
      "siren": "377672563",
    },
    Object {
      "activitePrincipale": "Activités des sièges sociaux",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> TYRE RESEARCH",
      "label": "MICHELIN TYRE RESEARCH",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "23 Place des Carmes Dechaux 63000 Clermont-Ferrand",
        "categorieEntreprise": "PME",
        "siret": "83479136000029",
      },
      "simpleLabel": "MICHELIN TYRE RESEARCH",
      "siren": "834791360",
    },
    Object {
      "activitePrincipale": "Activités des sièges sociaux",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> INDIA TECHNOLOGY CENTER LLP",
      "label": "MICHELIN INDIA TECHNOLOGY CENTER LLP",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "Place des Carmes Dechaux 63000 Clermont-Ferrand",
        "categorieEntreprise": "GE",
        "siret": "83483006900029",
      },
      "simpleLabel": "MICHELIN INDIA TECHNOLOGY CENTER LLP",
      "siren": "834830069",
    },
    Object {
      "activitePrincipale": "Restaurants et services de restauration mobile",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635596",
          "idcc": 1501,
          "mtime": 1560541782,
          "shortTitle": "Restauration rapide",
          "texte_de_base": "KALITEXT000005672325",
          "title": "Convention collective nationale de la restauration rapide du 18 mars 1988",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635596",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "CHEZ <b><u>MICHELINE</b></u>",
      "label": "CHEZ MICHELINE",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "10 RUE DU LOUVRE 75001 PARIS 1",
        "categorieEntreprise": "PME",
        "siret": "82322762400017",
      },
      "simpleLabel": "CHEZ MICHELINE",
      "siren": "823227624",
    },
    Object {
      "activitePrincipale": "Activités d'architecture",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_NON_ETEN",
          "id": "KALICONT000005635221",
          "idcc": 1596,
          "mtime": 1562614614,
          "shortTitle": "Bâtiment Ouvriers (entreprises occupant jusqu'à 10 salariés)",
          "texte_de_base": "KALITEXT000005647125",
          "title": "Nouvelle convention collective nationale des ouvriers employés par les entreprises du bâtiment visées par le décret du 1er mars 1962 (c'est-à-dire occupant jusqu'à 10 salariés) du 7 mars 2018 (Avenant du 7 mars 2018) ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635221",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "PARM CONCEPT PHARMACIE REALISATION <b><u>MICHELIN</b></u>",
      "label": "PARM CONCEPT PHARMACIE REALISATION MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "Rue du Carreau 69960 Corbas",
        "categorieEntreprise": "PME",
        "siret": "50953360000011",
      },
      "simpleLabel": "PARM CONCEPT",
      "siren": "509533600",
    },
    Object {
      "activitePrincipale": "Autres travaux de construction spécialisés n.c.a.",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_NON_ETEN",
          "id": "KALICONT000005635221",
          "idcc": 1596,
          "mtime": 1562614614,
          "shortTitle": "Bâtiment Ouvriers (entreprises occupant jusqu'à 10 salariés)",
          "texte_de_base": "KALITEXT000005647125",
          "title": "Nouvelle convention collective nationale des ouvriers employés par les entreprises du bâtiment visées par le décret du 1er mars 1962 (c'est-à-dire occupant jusqu'à 10 salariés) du 7 mars 2018 (Avenant du 7 mars 2018) ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635221",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "DAVID ET HERVE <b><u>MICHELIN</b></u>",
      "label": "DAVID ET HERVE MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "Chemin de la Batterie 42220 Graix",
        "categorieEntreprise": "PME",
        "siret": "40429987700013",
      },
      "simpleLabel": "DAVID ET HERVE MICHELIN",
      "siren": "404299877",
    },
    Object {
      "activitePrincipale": "Restaurants et services de restauration mobile",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635596",
          "idcc": 1501,
          "mtime": 1560541782,
          "shortTitle": "Restauration rapide",
          "texte_de_base": "KALITEXT000005672325",
          "title": "Convention collective nationale de la restauration rapide du 18 mars 1988",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635596",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "LA PETITE <b><u>MICHELINE</b></u>",
      "label": "LA PETITE MICHELINE",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "9 Place Henri Thibon 07140 Les Vans",
        "categorieEntreprise": "PME",
        "siret": "84393342500012",
      },
      "simpleLabel": "LA PETITE MICHELINE",
      "siren": "843933425",
    },
    Object {
      "activitePrincipale": "Activités des sièges sociaux",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> SIAM COMPANY LTD",
      "label": "MICHELIN SIAM COMPANY LTD",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "23 Place des Carmes Dechaux 63000 Clermont-Ferrand",
        "categorieEntreprise": "PME",
        "siret": "83483004400022",
      },
      "simpleLabel": "MICHELIN SIAM COMPANY LTD",
      "siren": "834830044",
    },
  ],
}
`;

exports[`Test api params not only open 1`] = `
Object {
  "entreprises": Array [
    Object {
      "activitePrincipale": "Fabrication et rechapage de pneumatiques",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635173",
          "idcc": 1486,
          "mtime": 1556652289,
          "shortTitle": "Bureaux d'études techniques, cabinets d'ingénieurs-conseils et sociétés de conseils",
          "texte_de_base": "KALITEXT000005679895",
          "title": "Convention collective nationale des bureaux d'études techniques, des cabinets d'ingénieurs-conseils et des sociétés de conseils du 15 décembre 1987. ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635173",
        },
      ],
      "etablissements": 130,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES <b><u>MICHELIN</b></u>",
      "label": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
      "matching": 20,
      "matchingEtablissement": Object {
        "address": "7 Avenue du Président René Coty 10600 La Chapelle-Saint-Luc",
        "categorieEntreprise": "GE",
        "siret": "85520050701171",
      },
      "simpleLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
      "siren": "855200507",
    },
    Object {
      "activitePrincipale": "Édition de livres",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635173",
          "idcc": 1486,
          "mtime": 1556652289,
          "shortTitle": "Bureaux d'études techniques, cabinets d'ingénieurs-conseils et sociétés de conseils",
          "texte_de_base": "KALITEXT000005679895",
          "title": "Convention collective nationale des bureaux d'études techniques, des cabinets d'ingénieurs-conseils et des sociétés de conseils du 15 décembre 1987. ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635173",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 3,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> TRAVEL PARTNER",
      "label": "MICHELIN TRAVEL PARTNER",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "27 Cours de l'Ile Seguin 92100 Boulogne-Billancourt",
        "categorieEntreprise": "GE",
        "siret": "43367772100030",
      },
      "simpleLabel": "MICHELIN TRAVEL PARTNER",
      "siren": "433677721",
    },
    Object {
      "activitePrincipale": "Fabrication de caoutchouc synthétique",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635613",
          "idcc": 44,
          "mtime": 1562873918,
          "shortTitle": "Industries chimiques et connexes",
          "texte_de_base": "KALITEXT000005677744",
          "title": "Convention collective nationale des industries chimiques et connexes du 30 décembre 1952. Étendue par arrêté du 13 novembre 1956 JONC 12 décembre 1956",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635613",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "SIMOREP ET CIE SOC DU CAOUTCHOUC SYNTHETIQUE <b><u>MICHELIN</b></u>",
      "label": "SIMOREP ET CIE SOC DU CAOUTCHOUC SYNTHETIQUE MICHELIN",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "Rue Edouard Michelin 33530 Bassens",
        "categorieEntreprise": "GE",
        "siret": "32852574600017",
      },
      "simpleLabel": "SIMOREP ET CIE",
      "siren": "328525746",
    },
    Object {
      "activitePrincipale": "Action sociale sans hébergement pour jeunes enfants",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_NON_ETEN",
          "id": "KALICONT000005635234",
          "idcc": 29,
          "shortTitle": "Hospitalisation privée : établissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif (FEHAP)",
          "texte_de_base": "KALITEXT000029787837",
          "title": "Convention collective nationale des etablissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif du 31 octobre 1951.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635234",
        },
      ],
      "etablissements": 11,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "SOHPEM SOC OEUVRES HYGIENE <b><u>MICHELIN</b></u> MULTI-ACCUEIL LES 3 RECRES",
      "label": "SOHPEM SOC OEUVRES HYGIENE MICHELIN MULTI-ACCUEIL LES 3 RECRES",
      "matching": 3,
      "matchingEtablissement": Object {
        "address": "19 Rue de Bien - Assis 63100 Clermont-Ferrand",
        "categorieEntreprise": "PME",
        "siret": "85720172700172",
      },
      "simpleLabel": "SOC OEUVRES HYGIENE MICHELIN",
      "siren": "857201727",
    },
    Object {
      "activitePrincipale": "Hébergement médicalisé",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_NON_ETEN",
          "id": "KALICONT000005635234",
          "idcc": 29,
          "shortTitle": "Hospitalisation privée : établissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif (FEHAP)",
          "texte_de_base": "KALITEXT000029787837",
          "title": "Convention collective nationale des etablissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif du 31 octobre 1951.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635234",
        },
      ],
      "etablissements": 8,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "S.S.I.D.P.A <b><u>MICHELINE</b></u> GOYHENECHE SOINS DOMICILE PERSONNES AGEES EHPAD LE SOULEILHOU",
      "label": "S.S.I.D.P.A MICHELINE GOYHENECHE SOINS DOMICILE PERSONNES AGEES EHPAD LE SOULEILHOU",
      "matching": 6,
      "matchingEtablissement": Object {
        "address": "4 Rue de la Quere 09290 Le Mas-d'Azil",
        "categorieEntreprise": "PME",
        "siret": "33380040700061",
      },
      "simpleLabel": "MICHELINE GOYHENECHE",
      "siren": "333800407",
    },
    Object {
      "activitePrincipale": "Activités des syndicats de salariés",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 7,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "COMITE ENTREPRISE <b><u>MICHELIN</b></u>",
      "label": "COMITE ENTREPRISE MICHELIN",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "16 Rue de Toutlemonde 49300 Cholet",
        "categorieEntreprise": "PME",
        "siret": "77563420700093",
      },
      "simpleLabel": "COMITE ENTREPRISE MICHELIN",
      "siren": "775634207",
    },
    Object {
      "activitePrincipale": "Transports aériens de passagers",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635872",
          "idcc": 275,
          "mtime": 1560802019,
          "shortTitle": "Transport aérien : personnel au sol",
          "texte_de_base": "KALITEXT000005688161",
          "title": "Convention collective nationale du personnel au sol des entreprises de transport aérien du 22 mai 1959.  Etendue par arrêté du 10 janvier 1964 JONC 21 janvier 1964 et rectificatif JONC 4 février 1964.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635872",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> AIR SERVICES",
      "label": "MICHELIN AIR SERVICES",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "23 Place des Carmes Dechaux 63000 Clermont-Ferrand",
        "categorieEntreprise": "GE",
        "siret": "41474650300013",
      },
      "simpleLabel": "MICHELIN AIR SERVICES",
      "siren": "414746503",
    },
    Object {
      "activitePrincipale": "Autres assurances",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635784",
          "idcc": 2128,
          "mtime": 1562096111,
          "shortTitle": "Mutualité",
          "texte_de_base": "KALITEXT000005639853",
          "title": "Convention collective nationale de la mutualité du 31 janvier 2000.  Etendue par arrêté du 17 août 2001 JORF 28 août 2001",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635784",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "MNPEM MUTUELLE NATIONALE PERSO ETS <b><u>MICHELIN</b></u>",
      "label": "MNPEM MUTUELLE NATIONALE PERSO ETS MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "2 Rue de Bien - Assis 63100 Clermont-Ferrand",
        "categorieEntreprise": "PME",
        "siret": "38204646400030",
      },
      "simpleLabel": "MUTUELLE NATIONALE PERSO ETS MICHELIN",
      "siren": "382046464",
    },
    Object {
      "activitePrincipale": "Autres commerces de détail alimentaires en magasin spécialisé",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635421",
          "idcc": 1505,
          "mtime": 1558553477,
          "shortTitle": "Commerce de détail des fruits et légumes, épicerie et produits laitiers",
          "texte_de_base": "KALITEXT000005689370",
          "title": "Convention collective nationale du commerce de détail des fruits et légumes, épicerie et produits laitiers du 15 avril 1988.  Etendue par arrêté du 20 juin 1988, JORF 25 juin 1988.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635421",
        },
      ],
      "etablissements": 4,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "FROMAGERIE DANIEL <b><u>MICHELIN</b></u>",
      "label": "FROMAGERIE DANIEL MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "15 Grand Rue 01210 Ferney-Voltaire",
        "categorieEntreprise": "PME",
        "siret": "44869567600032",
      },
      "simpleLabel": "FROMAGERIE DANIEL MICHELIN",
      "siren": "448695676",
    },
    Object {
      "activitePrincipale": "Activités des syndicats de salariés",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "COMITE D'ETABLISSEMENT <b><u>MICHELIN</b></u>",
      "label": "COMITE D'ETABLISSEMENT MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "6 Avenue du Président René Coty 10600 La Chapelle-Saint-Luc",
        "categorieEntreprise": "PME",
        "siret": "32779802100017",
      },
      "simpleLabel": "COMITE D'ETABLISSEMENT MICHELIN",
      "siren": "327798021",
    },
    Object {
      "activitePrincipale": "Travaux de plâtrerie",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "idcc": 152,
          "shortTitle": "",
        },
      ],
      "etablissements": 5,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "PLATRERIE PEINTURE <b><u>MICHELIN</b></u>",
      "label": "PLATRERIE PEINTURE MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "2 Avenue de Chalon 71380 Saint-Marcel",
        "categorieEntreprise": "PME",
        "siret": "51894867400040",
      },
      "simpleLabel": "PLATRERIE PEINTURE MICHELIN",
      "siren": "518948674",
    },
    Object {
      "activitePrincipale": "Exploitation de laiteries et fabrication de fromage",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635449",
          "idcc": 112,
          "mtime": 1562873918,
          "shortTitle": "Lait : industrie laitière",
          "texte_de_base": "KALITEXT000005653489",
          "title": "Convention collective nationale de l'industrie laitière du 20 mai 1955, modifiée par avenant n° 34 du 29 juin 2006. Etendue par arrêté du 10 décembre 2007 JORF 18 décembre 2007",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635449",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635421",
          "idcc": 1505,
          "mtime": 1558553477,
          "shortTitle": "Commerce de détail des fruits et légumes, épicerie et produits laitiers",
          "texte_de_base": "KALITEXT000005689370",
          "title": "Convention collective nationale du commerce de détail des fruits et légumes, épicerie et produits laitiers du 15 avril 1988.  Etendue par arrêté du 20 juin 1988, JORF 25 juin 1988.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635421",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "FROMAGERIE <b><u>MICHELIN</b></u> FABRICE",
      "label": "FROMAGERIE MICHELIN FABRICE",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "2 Place de la Mairie 25160 Saint-Point-Lac",
        "categorieEntreprise": "PME",
        "siret": "47848103900012",
      },
      "simpleLabel": "FROMAGERIE MICHELIN FABRICE",
      "siren": "478481039",
    },
    Object {
      "activitePrincipale": "Commerce de détail de viandes et de produits à base de viande en magasin spécialisé",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635593",
          "idcc": 992,
          "mtime": 1560458317,
          "shortTitle": "Boucherie, boucherie-charcuterie, boucherie hippophagique, triperie, commerces de volailles et gibiers",
          "texte_de_base": "KALITEXT000005674098",
          "title": "Convention collective nationale de la boucherie, boucherie-charcuterie, boucherie hippophagique, triperie, commerces de volailles et gibiers du 12 décembre 1978, actualisée",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635593",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "SARL ROUFFIAC - <b><u>MICHELIN</b></u>",
      "label": "SARL ROUFFIAC - MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "68 Rue Louis le Grand 39140 Bletterans",
        "categorieEntreprise": "PME",
        "siret": "37767256300014",
      },
      "simpleLabel": "SARL ROUFFIAC - MICHELIN",
      "siren": "377672563",
    },
    Object {
      "activitePrincipale": "Activités des sièges sociaux",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> TYRE RESEARCH",
      "label": "MICHELIN TYRE RESEARCH",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "23 Place des Carmes Dechaux 63000 Clermont-Ferrand",
        "categorieEntreprise": "PME",
        "siret": "83479136000029",
      },
      "simpleLabel": "MICHELIN TYRE RESEARCH",
      "siren": "834791360",
    },
    Object {
      "activitePrincipale": "Activités des sièges sociaux",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> INDIA TECHNOLOGY CENTER LLP",
      "label": "MICHELIN INDIA TECHNOLOGY CENTER LLP",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "Place des Carmes Dechaux 63000 Clermont-Ferrand",
        "categorieEntreprise": "GE",
        "siret": "83483006900029",
      },
      "simpleLabel": "MICHELIN INDIA TECHNOLOGY CENTER LLP",
      "siren": "834830069",
    },
    Object {
      "activitePrincipale": "Restaurants et services de restauration mobile",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635596",
          "idcc": 1501,
          "mtime": 1560541782,
          "shortTitle": "Restauration rapide",
          "texte_de_base": "KALITEXT000005672325",
          "title": "Convention collective nationale de la restauration rapide du 18 mars 1988",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635596",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "CHEZ <b><u>MICHELINE</b></u>",
      "label": "CHEZ MICHELINE",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "10 RUE DU LOUVRE 75001 PARIS 1",
        "categorieEntreprise": "PME",
        "siret": "82322762400017",
      },
      "simpleLabel": "CHEZ MICHELINE",
      "siren": "823227624",
    },
    Object {
      "activitePrincipale": "Activités d'architecture",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_NON_ETEN",
          "id": "KALICONT000005635221",
          "idcc": 1596,
          "mtime": 1562614614,
          "shortTitle": "Bâtiment Ouvriers (entreprises occupant jusqu'à 10 salariés)",
          "texte_de_base": "KALITEXT000005647125",
          "title": "Nouvelle convention collective nationale des ouvriers employés par les entreprises du bâtiment visées par le décret du 1er mars 1962 (c'est-à-dire occupant jusqu'à 10 salariés) du 7 mars 2018 (Avenant du 7 mars 2018) ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635221",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "PARM CONCEPT PHARMACIE REALISATION <b><u>MICHELIN</b></u>",
      "label": "PARM CONCEPT PHARMACIE REALISATION MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "Rue du Carreau 69960 Corbas",
        "categorieEntreprise": "PME",
        "siret": "50953360000011",
      },
      "simpleLabel": "PARM CONCEPT",
      "siren": "509533600",
    },
    Object {
      "activitePrincipale": "Autres travaux de construction spécialisés n.c.a.",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_NON_ETEN",
          "id": "KALICONT000005635221",
          "idcc": 1596,
          "mtime": 1562614614,
          "shortTitle": "Bâtiment Ouvriers (entreprises occupant jusqu'à 10 salariés)",
          "texte_de_base": "KALITEXT000005647125",
          "title": "Nouvelle convention collective nationale des ouvriers employés par les entreprises du bâtiment visées par le décret du 1er mars 1962 (c'est-à-dire occupant jusqu'à 10 salariés) du 7 mars 2018 (Avenant du 7 mars 2018) ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635221",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "DAVID ET HERVE <b><u>MICHELIN</b></u>",
      "label": "DAVID ET HERVE MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "Chemin de la Batterie 42220 Graix",
        "categorieEntreprise": "PME",
        "siret": "40429987700013",
      },
      "simpleLabel": "DAVID ET HERVE MICHELIN",
      "siren": "404299877",
    },
    Object {
      "activitePrincipale": "Restaurants et services de restauration mobile",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635596",
          "idcc": 1501,
          "mtime": 1560541782,
          "shortTitle": "Restauration rapide",
          "texte_de_base": "KALITEXT000005672325",
          "title": "Convention collective nationale de la restauration rapide du 18 mars 1988",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635596",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "LA PETITE <b><u>MICHELINE</b></u>",
      "label": "LA PETITE MICHELINE",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "9 Place Henri Thibon 07140 Les Vans",
        "categorieEntreprise": "PME",
        "siret": "84393342500012",
      },
      "simpleLabel": "LA PETITE MICHELINE",
      "siren": "843933425",
    },
    Object {
      "activitePrincipale": "Activités des sièges sociaux",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> SIAM COMPANY LTD",
      "label": "MICHELIN SIAM COMPANY LTD",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "23 Place des Carmes Dechaux 63000 Clermont-Ferrand",
        "categorieEntreprise": "PME",
        "siret": "83483004400022",
      },
      "simpleLabel": "MICHELIN SIAM COMPANY LTD",
      "siren": "834830044",
    },
  ],
}
`;

exports[`Test api params not with convention 1`] = `
Object {
  "entreprises": Array [
    Object {
      "activitePrincipale": "Fabrication et rechapage de pneumatiques",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635173",
          "idcc": 1486,
          "mtime": 1556652289,
          "shortTitle": "Bureaux d'études techniques, cabinets d'ingénieurs-conseils et sociétés de conseils",
          "texte_de_base": "KALITEXT000005679895",
          "title": "Convention collective nationale des bureaux d'études techniques, des cabinets d'ingénieurs-conseils et des sociétés de conseils du 15 décembre 1987. ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635173",
        },
      ],
      "etablissements": 130,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES <b><u>MICHELIN</b></u>",
      "label": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
      "matching": 20,
      "matchingEtablissement": Object {
        "address": "7 Avenue du Président René Coty 10600 La Chapelle-Saint-Luc",
        "categorieEntreprise": "GE",
        "siret": "85520050701171",
      },
      "simpleLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
      "siren": "855200507",
    },
    Object {
      "activitePrincipale": "Édition de livres",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635173",
          "idcc": 1486,
          "mtime": 1556652289,
          "shortTitle": "Bureaux d'études techniques, cabinets d'ingénieurs-conseils et sociétés de conseils",
          "texte_de_base": "KALITEXT000005679895",
          "title": "Convention collective nationale des bureaux d'études techniques, des cabinets d'ingénieurs-conseils et des sociétés de conseils du 15 décembre 1987. ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635173",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 3,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> TRAVEL PARTNER",
      "label": "MICHELIN TRAVEL PARTNER",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "27 Cours de l'Ile Seguin 92100 Boulogne-Billancourt",
        "categorieEntreprise": "GE",
        "siret": "43367772100030",
      },
      "simpleLabel": "MICHELIN TRAVEL PARTNER",
      "siren": "433677721",
    },
    Object {
      "activitePrincipale": "Fabrication de caoutchouc synthétique",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635613",
          "idcc": 44,
          "mtime": 1562873918,
          "shortTitle": "Industries chimiques et connexes",
          "texte_de_base": "KALITEXT000005677744",
          "title": "Convention collective nationale des industries chimiques et connexes du 30 décembre 1952. Étendue par arrêté du 13 novembre 1956 JONC 12 décembre 1956",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635613",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "SIMOREP ET CIE SOC DU CAOUTCHOUC SYNTHETIQUE <b><u>MICHELIN</b></u>",
      "label": "SIMOREP ET CIE SOC DU CAOUTCHOUC SYNTHETIQUE MICHELIN",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "Rue Edouard Michelin 33530 Bassens",
        "categorieEntreprise": "GE",
        "siret": "32852574600017",
      },
      "simpleLabel": "SIMOREP ET CIE",
      "siren": "328525746",
    },
    Object {
      "activitePrincipale": "Action sociale sans hébergement pour jeunes enfants",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_NON_ETEN",
          "id": "KALICONT000005635234",
          "idcc": 29,
          "shortTitle": "Hospitalisation privée : établissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif (FEHAP)",
          "texte_de_base": "KALITEXT000029787837",
          "title": "Convention collective nationale des etablissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif du 31 octobre 1951.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635234",
        },
      ],
      "etablissements": 11,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "SOHPEM SOC OEUVRES HYGIENE <b><u>MICHELIN</b></u> MULTI-ACCUEIL LES 3 RECRES",
      "label": "SOHPEM SOC OEUVRES HYGIENE MICHELIN MULTI-ACCUEIL LES 3 RECRES",
      "matching": 3,
      "matchingEtablissement": Object {
        "address": "19 Rue de Bien - Assis 63100 Clermont-Ferrand",
        "categorieEntreprise": "PME",
        "siret": "85720172700172",
      },
      "simpleLabel": "SOC OEUVRES HYGIENE MICHELIN",
      "siren": "857201727",
    },
    Object {
      "activitePrincipale": "Hébergement médicalisé",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_NON_ETEN",
          "id": "KALICONT000005635234",
          "idcc": 29,
          "shortTitle": "Hospitalisation privée : établissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif (FEHAP)",
          "texte_de_base": "KALITEXT000029787837",
          "title": "Convention collective nationale des etablissements privés d'hospitalisation, de soins, de cure et de garde à but non lucratif du 31 octobre 1951.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635234",
        },
      ],
      "etablissements": 8,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "S.S.I.D.P.A <b><u>MICHELINE</b></u> GOYHENECHE SOINS DOMICILE PERSONNES AGEES EHPAD LE SOULEILHOU",
      "label": "S.S.I.D.P.A MICHELINE GOYHENECHE SOINS DOMICILE PERSONNES AGEES EHPAD LE SOULEILHOU",
      "matching": 6,
      "matchingEtablissement": Object {
        "address": "4 Rue de la Quere 09290 Le Mas-d'Azil",
        "categorieEntreprise": "PME",
        "siret": "33380040700061",
      },
      "simpleLabel": "MICHELINE GOYHENECHE",
      "siren": "333800407",
    },
    Object {
      "activitePrincipale": "Activités des syndicats de salariés",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 7,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "COMITE ENTREPRISE <b><u>MICHELIN</b></u>",
      "label": "COMITE ENTREPRISE MICHELIN",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "16 Rue de Toutlemonde 49300 Cholet",
        "categorieEntreprise": "PME",
        "siret": "77563420700093",
      },
      "simpleLabel": "COMITE ENTREPRISE MICHELIN",
      "siren": "775634207",
    },
    Object {
      "activitePrincipale": "Transports aériens de passagers",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635872",
          "idcc": 275,
          "mtime": 1560802019,
          "shortTitle": "Transport aérien : personnel au sol",
          "texte_de_base": "KALITEXT000005688161",
          "title": "Convention collective nationale du personnel au sol des entreprises de transport aérien du 22 mai 1959.  Etendue par arrêté du 10 janvier 1964 JONC 21 janvier 1964 et rectificatif JONC 4 février 1964.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635872",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> AIR SERVICES",
      "label": "MICHELIN AIR SERVICES",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "23 Place des Carmes Dechaux 63000 Clermont-Ferrand",
        "categorieEntreprise": "GE",
        "siret": "41474650300013",
      },
      "simpleLabel": "MICHELIN AIR SERVICES",
      "siren": "414746503",
    },
    Object {
      "activitePrincipale": "Autres assurances",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635784",
          "idcc": 2128,
          "mtime": 1562096111,
          "shortTitle": "Mutualité",
          "texte_de_base": "KALITEXT000005639853",
          "title": "Convention collective nationale de la mutualité du 31 janvier 2000.  Etendue par arrêté du 17 août 2001 JORF 28 août 2001",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635784",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "MNPEM MUTUELLE NATIONALE PERSO ETS <b><u>MICHELIN</b></u>",
      "label": "MNPEM MUTUELLE NATIONALE PERSO ETS MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "2 Rue de Bien - Assis 63100 Clermont-Ferrand",
        "categorieEntreprise": "PME",
        "siret": "38204646400030",
      },
      "simpleLabel": "MUTUELLE NATIONALE PERSO ETS MICHELIN",
      "siren": "382046464",
    },
    Object {
      "activitePrincipale": "Autres commerces de détail alimentaires en magasin spécialisé",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635421",
          "idcc": 1505,
          "mtime": 1558553477,
          "shortTitle": "Commerce de détail des fruits et légumes, épicerie et produits laitiers",
          "texte_de_base": "KALITEXT000005689370",
          "title": "Convention collective nationale du commerce de détail des fruits et légumes, épicerie et produits laitiers du 15 avril 1988.  Etendue par arrêté du 20 juin 1988, JORF 25 juin 1988.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635421",
        },
      ],
      "etablissements": 4,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "FROMAGERIE DANIEL <b><u>MICHELIN</b></u>",
      "label": "FROMAGERIE DANIEL MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "15 Grand Rue 01210 Ferney-Voltaire",
        "categorieEntreprise": "PME",
        "siret": "44869567600032",
      },
      "simpleLabel": "FROMAGERIE DANIEL MICHELIN",
      "siren": "448695676",
    },
    Object {
      "activitePrincipale": "Activités des syndicats de salariés",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "COMITE D'ETABLISSEMENT <b><u>MICHELIN</b></u>",
      "label": "COMITE D'ETABLISSEMENT MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "6 Avenue du Président René Coty 10600 La Chapelle-Saint-Luc",
        "categorieEntreprise": "PME",
        "siret": "32779802100017",
      },
      "simpleLabel": "COMITE D'ETABLISSEMENT MICHELIN",
      "siren": "327798021",
    },
    Object {
      "activitePrincipale": "Travaux de plâtrerie",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "idcc": 152,
          "shortTitle": "",
        },
      ],
      "etablissements": 5,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "PLATRERIE PEINTURE <b><u>MICHELIN</b></u>",
      "label": "PLATRERIE PEINTURE MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "2 Avenue de Chalon 71380 Saint-Marcel",
        "categorieEntreprise": "PME",
        "siret": "51894867400040",
      },
      "simpleLabel": "PLATRERIE PEINTURE MICHELIN",
      "siren": "518948674",
    },
    Object {
      "activitePrincipale": "Exploitation de laiteries et fabrication de fromage",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635449",
          "idcc": 112,
          "mtime": 1562873918,
          "shortTitle": "Lait : industrie laitière",
          "texte_de_base": "KALITEXT000005653489",
          "title": "Convention collective nationale de l'industrie laitière du 20 mai 1955, modifiée par avenant n° 34 du 29 juin 2006. Etendue par arrêté du 10 décembre 2007 JORF 18 décembre 2007",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635449",
        },
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635421",
          "idcc": 1505,
          "mtime": 1558553477,
          "shortTitle": "Commerce de détail des fruits et légumes, épicerie et produits laitiers",
          "texte_de_base": "KALITEXT000005689370",
          "title": "Convention collective nationale du commerce de détail des fruits et légumes, épicerie et produits laitiers du 15 avril 1988.  Etendue par arrêté du 20 juin 1988, JORF 25 juin 1988.",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635421",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "FROMAGERIE <b><u>MICHELIN</b></u> FABRICE",
      "label": "FROMAGERIE MICHELIN FABRICE",
      "matching": 2,
      "matchingEtablissement": Object {
        "address": "2 Place de la Mairie 25160 Saint-Point-Lac",
        "categorieEntreprise": "PME",
        "siret": "47848103900012",
      },
      "simpleLabel": "FROMAGERIE MICHELIN FABRICE",
      "siren": "478481039",
    },
    Object {
      "activitePrincipale": "Commerce de détail de viandes et de produits à base de viande en magasin spécialisé",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635593",
          "idcc": 992,
          "mtime": 1560458317,
          "shortTitle": "Boucherie, boucherie-charcuterie, boucherie hippophagique, triperie, commerces de volailles et gibiers",
          "texte_de_base": "KALITEXT000005674098",
          "title": "Convention collective nationale de la boucherie, boucherie-charcuterie, boucherie hippophagique, triperie, commerces de volailles et gibiers du 12 décembre 1978, actualisée",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635593",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "SARL ROUFFIAC - <b><u>MICHELIN</b></u>",
      "label": "SARL ROUFFIAC - MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "68 Rue Louis le Grand 39140 Bletterans",
        "categorieEntreprise": "PME",
        "siret": "37767256300014",
      },
      "simpleLabel": "SARL ROUFFIAC - MICHELIN",
      "siren": "377672563",
    },
    Object {
      "activitePrincipale": "Activités des sièges sociaux",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> TYRE RESEARCH",
      "label": "MICHELIN TYRE RESEARCH",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "23 Place des Carmes Dechaux 63000 Clermont-Ferrand",
        "categorieEntreprise": "PME",
        "siret": "83479136000029",
      },
      "simpleLabel": "MICHELIN TYRE RESEARCH",
      "siren": "834791360",
    },
    Object {
      "activitePrincipale": "Activités des sièges sociaux",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> INDIA TECHNOLOGY CENTER LLP",
      "label": "MICHELIN INDIA TECHNOLOGY CENTER LLP",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "Place des Carmes Dechaux 63000 Clermont-Ferrand",
        "categorieEntreprise": "GE",
        "siret": "83483006900029",
      },
      "simpleLabel": "MICHELIN INDIA TECHNOLOGY CENTER LLP",
      "siren": "834830069",
    },
    Object {
      "activitePrincipale": "Restaurants et services de restauration mobile",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635596",
          "idcc": 1501,
          "mtime": 1560541782,
          "shortTitle": "Restauration rapide",
          "texte_de_base": "KALITEXT000005672325",
          "title": "Convention collective nationale de la restauration rapide du 18 mars 1988",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635596",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "CHEZ <b><u>MICHELINE</b></u>",
      "label": "CHEZ MICHELINE",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "10 RUE DU LOUVRE 75001 PARIS 1",
        "categorieEntreprise": "PME",
        "siret": "82322762400017",
      },
      "simpleLabel": "CHEZ MICHELINE",
      "siren": "823227624",
    },
    Object {
      "activitePrincipale": "Activités d'architecture",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_NON_ETEN",
          "id": "KALICONT000005635221",
          "idcc": 1596,
          "mtime": 1562614614,
          "shortTitle": "Bâtiment Ouvriers (entreprises occupant jusqu'à 10 salariés)",
          "texte_de_base": "KALITEXT000005647125",
          "title": "Nouvelle convention collective nationale des ouvriers employés par les entreprises du bâtiment visées par le décret du 1er mars 1962 (c'est-à-dire occupant jusqu'à 10 salariés) du 7 mars 2018 (Avenant du 7 mars 2018) ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635221",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "PARM CONCEPT PHARMACIE REALISATION <b><u>MICHELIN</b></u>",
      "label": "PARM CONCEPT PHARMACIE REALISATION MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "Rue du Carreau 69960 Corbas",
        "categorieEntreprise": "PME",
        "siret": "50953360000011",
      },
      "simpleLabel": "PARM CONCEPT",
      "siren": "509533600",
    },
    Object {
      "activitePrincipale": "Autres travaux de construction spécialisés n.c.a.",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_NON_ETEN",
          "id": "KALICONT000005635221",
          "idcc": 1596,
          "mtime": 1562614614,
          "shortTitle": "Bâtiment Ouvriers (entreprises occupant jusqu'à 10 salariés)",
          "texte_de_base": "KALITEXT000005647125",
          "title": "Nouvelle convention collective nationale des ouvriers employés par les entreprises du bâtiment visées par le décret du 1er mars 1962 (c'est-à-dire occupant jusqu'à 10 salariés) du 7 mars 2018 (Avenant du 7 mars 2018) ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635221",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "DAVID ET HERVE <b><u>MICHELIN</b></u>",
      "label": "DAVID ET HERVE MICHELIN",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "Chemin de la Batterie 42220 Graix",
        "categorieEntreprise": "PME",
        "siret": "40429987700013",
      },
      "simpleLabel": "DAVID ET HERVE MICHELIN",
      "siren": "404299877",
    },
    Object {
      "activitePrincipale": "Restaurants et services de restauration mobile",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635596",
          "idcc": 1501,
          "mtime": 1560541782,
          "shortTitle": "Restauration rapide",
          "texte_de_base": "KALITEXT000005672325",
          "title": "Convention collective nationale de la restauration rapide du 18 mars 1988",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635596",
        },
      ],
      "etablissements": 1,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "LA PETITE <b><u>MICHELINE</b></u>",
      "label": "LA PETITE MICHELINE",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "9 Place Henri Thibon 07140 Les Vans",
        "categorieEntreprise": "PME",
        "siret": "84393342500012",
      },
      "simpleLabel": "LA PETITE MICHELINE",
      "siren": "843933425",
    },
    Object {
      "activitePrincipale": "Activités des sièges sociaux",
      "caractereEmployeurUniteLegale": "O",
      "conventions": Array [
        Object {
          "etat": "VIGUEUR_ETEN",
          "id": "KALICONT000005635597",
          "idcc": 45,
          "mtime": 1562873918,
          "shortTitle": "Caoutchouc",
          "texte_de_base": "KALITEXT000005673838",
          "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
          "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
        },
      ],
      "etablissements": 2,
      "etatAdministratifEtablissement": "A",
      "etatAdministratifUniteLegale": "A",
      "highlightLabel": "<b><u>MICHELIN</b></u> SIAM COMPANY LTD",
      "label": "MICHELIN SIAM COMPANY LTD",
      "matching": 1,
      "matchingEtablissement": Object {
        "address": "23 Place des Carmes Dechaux 63000 Clermont-Ferrand",
        "categorieEntreprise": "PME",
        "siret": "83483004400022",
      },
      "simpleLabel": "MICHELIN SIAM COMPANY LTD",
      "siren": "834830044",
    },
  ],
}
`;

exports[`Test entreprise search correct siren 1`] = `
Object {
  "activitePrincipale": "Fabrication et rechapage de pneumatiques",
  "caractereEmployeurUniteLegale": "O",
  "conventions": Array [
    Object {
      "etat": "VIGUEUR_ETEN",
      "id": "KALICONT000005635597",
      "idcc": 45,
      "mtime": 1562873918,
      "shortTitle": "Caoutchouc",
      "texte_de_base": "KALITEXT000005673838",
      "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
      "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
    },
    Object {
      "idcc": 9999,
      "shortTitle": "",
    },
    Object {
      "etat": "VIGUEUR_ETEN",
      "id": "KALICONT000005635173",
      "idcc": 1486,
      "mtime": 1556652289,
      "shortTitle": "Bureaux d'études techniques, cabinets d'ingénieurs-conseils et sociétés de conseils",
      "texte_de_base": "KALITEXT000005679895",
      "title": "Convention collective nationale des bureaux d'études techniques, des cabinets d'ingénieurs-conseils et des sociétés de conseils du 15 décembre 1987. ",
      "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635173",
    },
  ],
  "etablissements": 130,
  "etatAdministratifEtablissement": "A",
  "etatAdministratifUniteLegale": "A",
  "highlightLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
  "label": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
  "matching": 35,
  "simpleLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
  "siren": "855200507",
}
`;

exports[`Test etablissement search correct siret 1`] = `
Object {
  "activitePrincipale": "Traitement de données, hébergement et activités connexes",
  "address": "107 RUE SERVIENT 69003 LYON 3EME",
  "caractereEmployeurUniteLegale": "O",
  "convention": Object {
    "etat": "VIGUEUR_ETEN",
    "id": "KALICONT000005635597",
    "idcc": 45,
    "mtime": 1562873918,
    "shortTitle": "Caoutchouc",
    "texte_de_base": "KALITEXT000005673838",
    "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
    "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
  },
  "etablissements": 130,
  "etatAdministratifEtablissement": "A",
  "etatAdministratifUniteLegale": "A",
  "highlightLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
  "label": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
  "matching": 1,
  "simpleLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
  "siren": "855200507",
  "siret": "85520050703169",
}
`;

exports[`Test search generic search 1`] = `
Object {
  "activitePrincipale": "Fabrication et rechapage de pneumatiques",
  "caractereEmployeurUniteLegale": "O",
  "conventions": Array [
    Object {
      "etat": "VIGUEUR_ETEN",
      "id": "KALICONT000005635597",
      "idcc": 45,
      "mtime": 1562873918,
      "shortTitle": "Caoutchouc",
      "texte_de_base": "KALITEXT000005673838",
      "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
      "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
    },
    Object {
      "etat": "VIGUEUR_ETEN",
      "id": "KALICONT000005635173",
      "idcc": 1486,
      "mtime": 1556652289,
      "shortTitle": "Bureaux d'études techniques, cabinets d'ingénieurs-conseils et sociétés de conseils",
      "texte_de_base": "KALITEXT000005679895",
      "title": "Convention collective nationale des bureaux d'études techniques, des cabinets d'ingénieurs-conseils et des sociétés de conseils du 15 décembre 1987. ",
      "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635173",
    },
  ],
  "etablissements": 130,
  "etatAdministratifEtablissement": "A",
  "etatAdministratifUniteLegale": "A",
  "highlightLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES <b><u>MICHELIN</b></u>",
  "label": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
  "matching": 20,
  "simpleLabel": "MANUFACTURE FRANCAISE DES PNEUMATIQUES MICHELIN",
  "siren": "855200507",
}
`;
